syntax = "proto3";


option java_package = "tech.ordinaryroad.live.chat.client.kuaishou.protobuf";

enum PayloadType {
  UNKNOWN = 0;
  CS_HEARTBEAT = 1;
  CS_ERROR = 3;
  CS_PING = 4;
  PS_HOST_INFO = 51;
  SC_HEARTBEAT_ACK = 101;
  SC_ECHO = 102;
  SC_ERROR = 103;
  SC_PING_ACK = 104;
  SC_INFO = 105;
  CS_ENTER_ROOM = 200;
  CS_USER_PAUSE = 201;
  CS_USER_EXIT = 202;
  CS_AUTHOR_PUSH_TRAFFIC_ZERO = 203;
  CS_HORSE_RACING = 204;
  CS_RACE_LOSE = 205;
  CS_VOIP_SIGNAL = 206;
  SC_ENTER_ROOM_ACK = 300;
  SC_AUTHOR_PAUSE = 301;
  SC_AUTHOR_RESUME = 302;
  SC_AUTHOR_PUSH_TRAFFIC_ZERO = 303;
  SC_AUTHOR_HEARTBEAT_MISS = 304;
  SC_PIP_STARTED = 305;
  SC_PIP_ENDED = 306;
  SC_HORSE_RACING_ACK = 307;
  SC_VOIP_SIGNAL = 308;
  SC_FEED_PUSH = 310;
  SC_ASSISTANT_STATUS = 311;
  SC_REFRESH_WALLET = 312;
  SC_LIVE_CHAT_CALL = 320;
  SC_LIVE_CHAT_CALL_ACCEPTED = 321;
  SC_LIVE_CHAT_CALL_REJECTED = 322;
  SC_LIVE_CHAT_READY = 323;
  SC_LIVE_CHAT_GUEST_END = 324;
  SC_LIVE_CHAT_ENDED = 325;
  SC_RENDERING_MAGIC_FACE_DISABLE = 326;
  SC_RENDERING_MAGIC_FACE_ENABLE = 327;
  SC_RED_PACK_FEED = 330;
  SC_LIVE_WATCHING_LIST = 340;
  SC_LIVE_QUIZ_QUESTION_ASKED = 350;
  SC_LIVE_QUIZ_QUESTION_REVIEWED = 351;
  SC_LIVE_QUIZ_SYNC = 352;
  SC_LIVE_QUIZ_ENDED = 353;
  SC_LIVE_QUIZ_WINNERS = 354;
  SC_SUSPECTED_VIOLATION = 355;
  SC_SHOP_OPENED = 360;
  SC_SHOP_CLOSED = 361;
  SC_GUESS_OPENED = 370;
  SC_GUESS_CLOSED = 371;
  SC_PK_INVITATION = 380;
  SC_PK_STATISTIC = 381;
  SC_RIDDLE_OPENED = 390;
  SC_RIDDLE_CLOESED = 391;
  SC_RIDE_CHANGED = 412;
  SC_BET_CHANGED = 441;
  SC_BET_CLOSED = 442;
  SC_LIVE_SPECIAL_ACCOUNT_CONFIG_STATE = 645;
  SC_LIVE_WARNING_MASK_STATUS_CHANGED_AUDIENCE = 758;
}